# maturin-test

./: Cargo.toml  pyproject.toml
.github/workflows/: wheels.yml
src/: lib.rs
