[package]
name = "maturin-test"
version = "0.1.0"
authors = ["Justin Niessner <CrshOverride@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "maturin_test"
crate-type = ["cdylib"]

[dependencies]
reqwest = { version = "0.11", features = ["blocking", "json"] }
lazy_static = "1.4.0"
pyo3-asyncio = { version = "0.14", features = ["attributes", "tokio-runtime"] }
tokio = "1.9"

[dependencies.pyo3]
version = "0.14.5"
features = ["extension-module"]
